Ajuste telas Referente a DIzimista

--- a/SouDizimista.WebApp/Views/Dizimista/ConsultDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/ConsultDizimista.cshtml
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-md-12">
                 <label class="color-source-consult" for="logradouro">Logradouro:</label>
-                <input type="text" id="logradouro" class="form-control color-source-consult" value="@Model.Logradouro" readonly />
+                <input type="text" id="logradouro" class="form-control color-source-consult" value="@Model.Endereco.Logradouro" readonly />
             </div>
 
         </div>
@@ -24,12 +24,12 @@
 
             <div class="col-md-6">
                 <label class="color-source-consult" for="cep">Cep:</label>
-                <input type="text" id="cep" class="form-control color-source-consult" value="@Model.Cep" readonly />
+                <input type="text" id="cep" class="form-control color-source-consult" value="@Model.Endereco.Cep" readonly />
             </div>
 
             <div class="col-md-6">
                 <label class="color-source-consult" for="numero">Numero:</label>
-                <input type="text" id="numero" class="form-control color-source-consult" value="@Model.Numero" readonly />
+                <input type="text" id="numero" class="form-control color-source-consult" value="@Model.Endereco.Numero" readonly />
             </div>
 
         </div>
@@ -38,12 +38,12 @@
 
             <div class="col-md-6">
                 <label class="color-source-consult" for="complemento">Complemento:</label>
-                <input type="text" id="complemento" class="form-control color-source-consult" value="@Model.Complemento" readonly />
+                <input type="text" id="complemento" class="form-control color-source-consult" value="@Model.Endereco.Complemento" readonly />
             </div>
 
             <div class="col-md-6">
                 <label class="color-source-consult" for="bairro">Bairro:</label>
-                <input type="text" id="bairro" class="form-control color-source-consult" value="@Model.Bairro" readonly />
+                <input type="text" id="bairro" class="form-control color-source-consult" value="@Model.Endereco.Bairro" readonly />
             </div>
 
         </div>
@@ -52,12 +52,12 @@
 
             <div class="col-md-6">
                 <label class="color-source-consult" for="municipio">Municipio:</label>
-                <input type="text" id="municipio" class="form-control color-source-consult" value="@Model.Municipio" readonly />
+                <input type="text" id="municipio" class="form-control color-source-consult" value="@Model.Endereco.Municipio" readonly />
             </div>
 
             <div class="col-md-6">
                 <label class="color-source-consult" for="estado">Estado:</label>
-                <input type="text" id="estado" class="form-control color-source-consult" value="@Model.Estado" readonly />
+                <input type="text" id="estado" class="form-control color-source-consult" value="@Model.Endereco.Estado" readonly />
             </div>
 
         </div>
