--- a/SouDizimista.WebApp/Views/Dizimista/NewDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/NewDizimista.cshtml
@@ -30,8 +30,8 @@
 
                     <div class="col-12">
                         <label class="title-lable-dizimista">Cep</label>
-                        <input asp-for=Cep name="Cep" oninput="mascaraCep(this)" class="form-control buscaCep btnaction readOnly" type="text" data-viacep="Cep" data-receitaws="Cep" id="Cep" />
-                        <span asp-validation-for="Cep" class="text-danger"></span>
+                        <input asp-for=Endereco.Cep name="Endereco.Cep" oninput="mascaraCep(this)" class="form-control buscaCep btnaction readOnly" type="text" data-viacep="Cep" data-receitaws="Cep" id="Cep" />
+                        <span asp-validation-for="Endereco.Cep" class="text-danger"></span>
                     </div>
                     @*<div class="col-3">
                     <button id="btnbuscarCep" type="button" class="btn btn-success btnHide" style="margin-top: 2em; margin-left: -1em;">Buscar</button>
@@ -40,10 +40,11 @@
 
                 <div class="form-group row">
 
+                 
                     <div class="col-5">
 
                         <label class="title-lable-dizimista">Logradouro</label>
-                        <input class="form-control readOnly" name="logradouro" type="text" data-viacep="logradouro" data-receitaws="logradouro" value="" id="logradouro" />
+                        <input asp-for="Endereco.Logradouro" class="form-control readOnly" name="Endereco.Logradouro" type="text" data-viacep="logradouro" data-receitaws="logradouro" id="logradouro" />
 
                     </div>
 
@@ -51,14 +52,14 @@
                     <div class="col-5">
 
                         <label class="title-lable-dizimista">Complemento</label>
-                        <input class="form-control btnaction readOnly" name="complemento" type="text" data-viacep="complemento" data-receitaws="complemento" value="" id="complemento" />
+                        <input asp-for="Endereco.Complemento" class="form-control btnaction readOnly" name="Endereco.Complemento" type="text" data-viacep="complemento" data-receitaws="complemento" id="complemento" />
 
                     </div>
 
                     <div class="col-2">
 
                         <label class="title-lable-dizimista">Numero</label>
-                        <input class="form-control btnHide readOnly" type="text" data-viacep="numero" data-receitaws="numero" name="numero" id="numero" />
+                        <input asp-for="Endereco.Numero" class="form-control btnHide readOnly" type="text" data-viacep="numero" data-receitaws="numero" name="Endereco.Numero" id="numero" />
 
                     </div>
                 </div>
@@ -69,21 +70,21 @@
                     <div class="col-5">
 
                         <label class="title-lable-dizimista">Bairro</label>
-                        <input class="form-control btnaction readOnly" name="bairro" type="text" data-viacep="bairro" data-receitaws="bairro" id="bairro" />
+                        <input asp-for="Endereco.Bairro" class="form-control btnaction readOnly" name="Endereco.Bairro" type="text" data-viacep="bairro" data-receitaws="bairro" id="bairro" />
 
                     </div>
 
                     <div class="col-5">
 
                         <label class="title-lable-dizimista">Municipio</label>
-                        <input class="form-control btnaction readOnly" name="municipio" type="text" data-viacep="localidade" data-receitaws="municipio" id="municipio" />
+                        <input asp-for="Endereco.Municipio" class="form-control btnaction readOnly" name="Endereco.Municipio" type="text" data-viacep="localidade" data-receitaws="municipio" id="municipio" />
 
                     </div>
 
                     <div class="col-2">
 
                         <label class="title-lable-dizimista">Estado</label>
-                        <input class="form-control btnaction readOnly" name="estado" type="text" data-viacep="uf" data-receitaws="uf" id="estado" />
+                        <input asp-for="Endereco.Estado" class="form-control btnaction readOnly" name="Endereco.Estado" type="text" data-viacep="uf" data-receitaws="uf" id="estado" />
 
                     </div>
 
