--- a/SouDizimista.WebApp/Views/Dizimista/GetAllDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/GetAllDizimista.cshtml
@@ -37,7 +37,7 @@
             </td>
 
             <td>
-                @Html.ActionLink("Alterar", "EditDizimista", new { id = item.Id }, new { @class = "btn btn-info" })
+                @Html.ActionLink("Alterar", "ObterDizimistas", new { id = item.Id }, new { @class = "btn btn-info" })
                 @Html.ActionLink("Consultar", "ConsultDizimista", new { id = item.Id }, new {@class = "btn btn-secondary" })
                 @Html.ActionLink("Excluir", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
             </td>
