--- a/SouDizimista.WebApp/Views/Dizimista/EditDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/EditDizimista.cshtml
@@ -12,6 +12,7 @@
             <h2 class="title-lable-dizimista"> Atualizar Dizimista </h2>
             <hr />
             <div class="row">
+                @*Leo*@ 
                 <div class="col-md-6">
                     <label asp-for="Nome" class="control-label title-lable-dizimista">Nome do Dizimista</label>
                     <input asp-for="Nome" class="form-control" />
