--- a/SouDizimista.WebApp/Views/Dizimista/EditDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/EditDizimista.cshtml
@@ -14,9 +14,7 @@
 
             <div class="row">
                 <div class="col-md-6">
-
-
-
+                @*Conflito*@
                     <label asp-for="Nome" class="control-label title-lable-dizimista">Nome do Dizimista</label>
                     <input asp-for="Nome" class="form-control" />
                     <span asp-validation-for="Nome" class="text-danger"></span>
