Ajuste para renderizar a tela de Login

--- a/SouDizimista.WebApp/Views/Home/Login.cshtml
+++ b/SouDizimista.WebApp/Views/Home/Login.cshtml
@@ -1,5 +1,9 @@
 ﻿@model SouDizimista.Services.ServicesEntity.ServicesUsuario
 
+@{
+   Layout = "_LoginLayout";
+}
+
 <h2> Sou Dizimista </h2>
 
 <div asp-validation-summary="All" class="text-danger"></div>
