--- a/SouDizimista.WebApp/Views/Dizimista/EditDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/EditDizimista.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row">
-        <form class="needs-validation" asp-action="ObterDizimistas">
+        <form class="needs-validation" asp-action="EditDizimista">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <h2 class="title-lable-dizimista"> Atualizar Dizimista </h2>
