--- a/SouDizimista.WebApp/Views/Shared/_Layout.cshtml
+++ b/SouDizimista.WebApp/Views/Shared/_Layout.cshtml
@@ -19,79 +19,101 @@
                 <a class="icon-menu-logo" asp-controller="Home" asp-action="Index">Sou Dizimista</a>
             </div>
 
-            <div class="menu-items">
-                <nav>
-                    <ul>
-                        <li>
-                            <a id="paroquias-menu" asp-controller="Paroquia" asp-action="GetAllParoquia" class="nav-link nav-menu hand">Paróquias</a>
-                        </li>
-                        @*
-                        <li>
-                        <a class="search" href="#">
-                        <input class="browser-menu" />
-                        <span class="icon-menu"><ion-icon id="paroquias-menu" name="search-outline"></ion-icon></span>
-                        </a>
-                        </li>*@
+            <!-- Itens do Menu antigo -->
+            <!--
+            @*<div class="menu-items">
+            <nav>
+            <ul>
+            <li>
+            <a id="paroquias-menu" asp-controller="Dizimo" asp-action="GetAllParoquia" class="nav-link nav-menu hand">Dizimo</a>
+            </li>
+
+            <li>
+            <a class="nav-link  nav-menu" asp-area="" asp-controller="Administracao" asp-action="Administrar"> Administração </a>
+            </li>
+
+            <li>
+            <a class="nav-link  nav-menu" asp-area="" asp-controller="Financeiro" asp-action="Financas">Financeiro</a>
+            </li>
+
+            <li>
+            <a class="nav-link nav-menu" asp-area="" asp-controller="Home" asp-action="Privacy">Configurações</a>
+            </li>
+            </ul>
+            </nav>
+            </div>*@-->
+
+            <nav class="header-nav">
+                <div class="menu-items">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a id="dizimo-menu" asp-controller="Dizimo" asp-action="GetAllParoquia" class="nav-link nav-menu hand" data-module="Dizimo">Dizimo</a>
+                            </li>
+                            <!-- Adicione outros links de módulos aqui -->
+                        </ul>
+                    </nav>
+                </div>
+            </nav>
 
 
-                        <li>
-                            <a class="nav-link  nav-menu" asp-area="" asp-controller="Dizimista" asp-action="NewDizimista"> Administração </a>
-                        </li>
-
-                        <li>
-                            <a class="nav-link  nav-menu" asp-area="" asp-controller="Home" asp-action="Privacy">Contatos</a>
-                        </li>
-
-                        <li>
-                            <a class="nav-link nav-menu" asp-area="" asp-controller="Home" asp-action="Privacy">Configurações</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
         </nav>
 
         <aside>
             <section class="sidebar">
 
                 <div class="navigation">
-                    <ul>
 
-                        <li class="list active">
-                            <a asp-area="" asp-controller="Paroquia" asp-action="CreateParoquia">
-                                <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-                                <span class="title">Nova Paróquia</span>
-                            </a>
-                        </li>
+                    <!-- Menu antigo-->
+                    <!-- Meuno Antigo
+                    @* <ul>
 
-                        <li class="list">
-                            <a asp-area="" asp-controller="Dizimista" asp-action="NewDizimista">
-                                <span class="icon"><ion-icon name="body-outline"></ion-icon></span>
-                                <span class="title">Novo Dizimista</span>
-                            </a>
-                        </li>
+                    <li class="list active">
+                    <a asp-area="" asp-controller="Paroquia" asp-action="CreateParoquia">
+                    <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                    <span class="title">Nova Paróquia</span>
+                    </a>
+                    </li>
 
-                        <li class="list">
-                            <a asp-area="" asp-controller="Dizimista" asp-action="GetAllDizimista">
-                                <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
-                                <span class="title">Nossos Dizimistas</span>
-                            </a>
-                        </li>
+                    <li class="list">
+                    <a asp-area="" asp-controller="Dizimista" asp-action="NewDizimista">
+                    <span class="icon"><ion-icon name="body-outline"></ion-icon></span>
+                    <span class="title">Novo Dizimista</span>
+                    </a>
+                    </li>
+
+                    <li class="list">
+                    <a asp-area="" asp-controller="Dizimista" asp-action="GetAllDizimista">
+                    <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
+                    <span class="title">Nossos Dizimistas</span>
+                    </a>
+                    </li>
 
 
-                        <li class="list">
-                            <a asp-area="" asp-controller="Home" asp-action="Privacy">
-                                <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
-                                <span class="title">Configurações</span>
-                            </a>
-                        </li>
+                    <li class="list">
+                    <a asp-area="" asp-controller="Home" asp-action="Privacy">
+                    <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                    <span class="title">Configurações</span>
+                    </a>
+                    </li>
 
-                        <li class="list">
-                            <a asp-area="" asp-controller="Home" asp-action="Privacy">
-                                <span class="icon"><ion-icon name="exit-outline"></ion-icon></span>
-                                <span class="title">Sair</span>
-                            </a>
-                        </li>
-                    </ul>
+                    <li class="list">
+                    <a asp-area="" asp-controller="Home" asp-action="Privacy">
+                    <span class="icon"><ion-icon name="exit-outline"></ion-icon></span>
+                    <span class="title">Sair</span>
+                    </a>
+                    </li>
+                    </ul>*@ -->
+
+                    <aside>
+                        <section class="sidebar">
+                            <div class="navigation">
+                                <ul>
+                                    <!-- A lista de itens de menu será renderizada aqui -->
+                                </ul>
+                            </div>
+                        </section>
+                    </aside>
                 </div>
 
             </section>
@@ -119,6 +141,37 @@
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg .com/ionicons@5.5.2/dist/ionicons/ionicons.js"> </script>
+
+    <script>
+        $(document).ready(function() {
+            // Capturar o clique nos links dos módulos
+            $('.nav-menu').click(function(e) {
+                e.preventDefault(); // Impede o comportamento padrão do link
+
+                var moduleName = $(this).data('module'); // Obtém o nome do módulo do atributo "data-module"
+
+                // Carrega os itens de menu correspondentes ao módulo selecionado
+                loadMenuItems(moduleName);
+            });
+
+            // Função para carregar os itens de menu
+            function loadMenuItems(moduleName) {
+                $.ajax({
+                    url: '/Menu/GetMenuItems', // Rota para a ação que obtém os itens de menu
+                    type: 'POST',
+                    data: { module: moduleName },
+                    success: function(response) {
+                        // Atualizar o menu lateral com os itens de menu obtidos
+                        $('.navigation ul').html(response);
+                    },
+                    error: function(error) {
+                        console.log(error);
+                    }
+                });
+            }
+        });
+    </script>
+
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
