--- a/SouDizimista.WebApp/Views/Paroquia/GetAllParoquia.cshtml
+++ b/SouDizimista.WebApp/Views/Paroquia/GetAllParoquia.cshtml
@@ -37,8 +37,8 @@
             </td>
 
             <td>
-                @Html.ActionLink("Alterar", "CreateParoquia", new { id = item.Id }, new { @class = "btn btn-info" })
-                @Html.ActionLink("Consultar", "DetailsParoquia", new { id = item.Id }, new {@class = "btn btn-secondary" })
+                @Html.ActionLink("Alterar", "NewParoquia", new { id = item.Id }, new { @class = "btn btn-info" })
+                @Html.ActionLink("Consultar", "ConsultParoquia", new { id = item.Id }, new {@class = "btn btn-secondary" })
                 @Html.ActionLink("Excluir", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
             </td>
         </tr>
