--- a/SouDizimista.WebApp/Views/Paroquia/NewParoquia.cshtml
+++ b/SouDizimista.WebApp/Views/Paroquia/NewParoquia.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row">
-        <form class="needs-validation" asp-action="NewDizimista">
+        <form class="needs-validation" asp-action="NewParoquia">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <h2 class="title-lable-dizimista"> Nova Pároquia </h2>
