Ajustes sub menu

--- a/SouDizimista.WebApp/Views/Home/Index.cshtml
+++ b/SouDizimista.WebApp/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h4 style="color:#087575;"> Bem Vindo a Paróquia - Dominus</h4>
-    <p style="color:#087575;"> Deo Optimo Maximus <a href=""></a>.</p>
+    <h4 class="colordefault"> Bem Vindo Paz e Bem ! - Dominus</h4>
+    <p class="colordefault"> Deo Optimo Maximus <a href=""></a>.</p>
 </div>
