--- a/SouDizimista.WebApp/wwwroot/styles/main.css
+++ b/SouDizimista.WebApp/wwwroot/styles/main.css
@@ -45,10 +45,10 @@ header {
     align-items:center;
 }
 
-.logo a:hover{
-    color:#039090;
-    text-decoration:none;
-}
+    .logo a:hover {
+        color: #024f4f  ;
+        text-decoration: none;
+    }
 
 .logo  a ion-icon:hover{
     color:#039090;
@@ -56,6 +56,7 @@ header {
 
 .icon-menu-logo{
     color:#fffdff;
+    font-size:13px;
 }
 
 .nav-menu-logo {
@@ -98,7 +99,7 @@ header {
 
 .icon-menu {
     position: relative;
-    font-size: 1.2rem;
+    font-size: 1rem;
     z-index: 1;
     border: 0;
     background: transparent;
@@ -122,12 +123,12 @@ nav ul li a span:hover{
     align-content:center;
     margin-left:1rem;
     margin-right:1rem;
-    font-size:1rem;
+    font-size:13px;
     color:#ffffff !important;
     font-weight:600;
 }
  .nav-menu:hover{
-     color:#039090 !important;
+     color:#024f4f !important;
      list-style:none;
      text-decoration:none;
  }
@@ -136,7 +137,7 @@ nav ul li a span:hover{
 .navigation {
     display: block;
     position: relative;
-    height: 486px;
+    height: 472px;
     background-color: #0ebbbb;
     width: 300px;
     box-shadow: 10px 0 0 #039090;
@@ -145,7 +146,7 @@ nav ul li a span:hover{
     overflow-x: hidden;
     transition: 0.6s;
     margin: 0.1rem;
-    visibility: hidden;
+    visibility: visible;
 }
 .navigation:hover{
     width: 300px;
@@ -188,7 +189,7 @@ nav ul li a span:hover{
 
 .navigation ul li a .icon ion-icon{
     position:relative;
-   font-size:1.5rem;
+   font-size:1.1rem;
    z-index:1;
 }
 
@@ -199,6 +200,7 @@ padding-left: 10px;
 height:60px;
 line-height:60px;
 white-space: nowrap;
+font-size:13px;
 }
 
 .navigation ul li.active{
@@ -229,7 +231,7 @@ white-space: nowrap;
     }
 
 .list:hover {
-    background-color: #039090;
+    background-color: #024f4f;
 }
 
 
