Ajustes Menu e Layout

--- a/SouDizimista.WebApp/Views/Shared/_AsideMenu.cshtml
+++ b/SouDizimista.WebApp/Views/Shared/_AsideMenu.cshtml
@@ -23,7 +23,7 @@
                 </a>
             </li>
             <li class="menu-section ">
-                <h4 class="menu-text">Custom</h4>
+                <h4 class="menu-text">Opções</h4>
                 <i class="menu-icon ki ki-bold-more-hor icon-md"></i>
             </li>
 
@@ -128,3 +128,5 @@
         </ul>
     </div>
 </div>
+
+
