--- a/SouDizimista.WebApp/Views/Shared/_Aside.cshtml
+++ b/SouDizimista.WebApp/Views/Shared/_Aside.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="aside aside-left  aside-fixed  d-flex flex-column flex-row-auto" id="kt_aside">
+﻿<div class="aside  aside-fixed  d-flex flex-column flex-row-auto" id="kt_aside">
     <!--begin::Brand-->
     <div class="brand flex-column-auto " id="kt_brand">
         <!--begin::Logo-->
@@ -23,5 +23,6 @@
     <!--end::Brand-->
     <!--begin::Aside Menu-->
     <partial name="_AsideMenu" />
+    <
     <!--end::Aside Menu-->
 </div>
