--- a/SouDizimista.WebApp/wwwroot/styles/main.css
+++ b/SouDizimista.WebApp/wwwroot/styles/main.css
@@ -12,225 +12,93 @@
     display:flex;
 }
 
-.container-footer{
-    color:#039090;
-    font-weight:400;
+.footer-gms{
+    position:absolute;
+    bottom:0;
+    width:100%;
+    white-space:nowrap;
 }
+
+.container-footer {
+    color: #039090;
+    font-weight: 400;
+    height: 26px;
+}
+
 header {
-    height: 5rem;
+    height: 4rem;
     background-color: #0ebbbb;
     font-weight: 600;
     text-transform: uppercase;
-}
-
-.header-nav {
-    display: flex;
-    max-width: 75rem;
-    height: 5rem;
-    margin: auto;
-    justify-content: center;
+    color: #ffffff !important;
     align-items: center;
-
 }
 
-.hand{
-    cursor:pointer;
-}
-
-.logo {
+.header{
     display:flex;
-    width: 11rem;
-    text-decoration: none;
-    justify-content:center;
+    max-width:1140px;
+    height:48px;
+    margin:auto;
+    align-items:center;
+
+}
+
+.logo{
+    width:166px;
+}
+
+.logo-img {
+    width: 25px;
+    height: 25px;
+    background-color: #fff;
+    border-radius: 12.5px;
+}
+
+.titulo-modulo{
+    width:80px;
+}
+
+.modulos-menu {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
     align-items:center;
 }
 
-.logo a:hover{
-    color:#039090;
-    text-decoration:none;
+.usuario{
+    width:160px;
 }
 
-.logo  a ion-icon:hover{
-    color:#039090;
+.modulos{
+    
 }
-
-.icon-menu-logo{
-    color:#fffdff;
-}
-
-.nav-menu-logo {
-    color: #ffffff;
-    margin-left: 1rem;
-}
-
-.menu-items {
-    display: flex;
-    margin-top: 18px;
-    flex: 1;
-    justify-content: flex-end;
-}
-
-.menu-items ul li {
-    list-style:none;
-}
-
-.menu-items ul{
-    display:flex;
-}
-
-.paroquias{
-    display:block;
-}
-
-.search {
-    display: flex;
-}
-
-.browser-menu {
-    width: 18rem;
-    height: 2.1rem;
-    margin-top: 0.1rem;
-    border: 1px solid #ffffff;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    color:#039090;
-}
-
-.icon-menu {
-    position: relative;
-    font-size: 1.2rem;
-    z-index: 1;
-    border: 0;
-    background: transparent;
-    margin-left: -2rem;
-    margin-top: 0.5rem;
-    cursor: pointer;
-}
-
-.inline {
-    display: inline;
-    width: auto;
-}
-
-nav ul li a span:hover{
-    text-decoration:none
-}
-
-.nav-menu{
-    display:flex;
-    justify-content:center;
-    align-content:center;
-    margin-left:1rem;
-    margin-right:1rem;
-    font-size:1rem;
-    color:#ffffff !important;
-    font-weight:600;
-}
- .nav-menu:hover{
-     color:#039090 !important;
-     list-style:none;
-     text-decoration:none;
- }
-
-
 .navigation {
     display: block;
-    position: relative;
-    height: 486px;
+    height: 35.4rem;
+    margin-top: 16.8px;
     background-color: #0ebbbb;
-    width: 300px;
+    width: 250px;
     box-shadow: 10px 0 0 #039090;
     border-left: 10px solid #039090;
     border-top-left-radius: 10px;
-    overflow-x: hidden;
-    transition: 0.6s;
-    margin: 0.1rem;
-    visibility: hidden;
-}
-.navigation:hover{
-    width: 300px;
+    margin-left: 0.6px;
+    visibility: visible;
 }
 
-.navigation ul{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    padding-left:05px;
-    padding-top:40px;
- 
+nav {
+    position: absolute;
+    z-index: 99;
+    background-color: rgba(14, 187, 187, 0.9);
+    width: 160px;
+    height: calc(100vh - 306px);
+    top: 64px;
+    right: 0;
+    border-top-left-radius: 10px;
+    /*box-shadow: 10px 0 0 #039090;*/
+    border-left: 10px solid #039090;
 }
 
-.navigation ul li{
-    position:relative;
-    list-style:none;
-    width:100%;
-    border-top-left-radius:20px;
-    border-bottom-left-radius:20px;
-}
 
- .navigation ul li a{
-    position:relative;
-    display:flex; 
-    width:100%;
-    text-decoration:none;
-    color:#ffffff;
-}
-
-.navigation ul li a .icon{
-    position:relative;
-    display:block;
-    min-width:60px;
-    height:60px;
-    text-align:center;
-    line-height:70px;
-}
-
-.navigation ul li a .icon ion-icon{
-    position:relative;
-   font-size:1.5rem;
-   z-index:1;
-}
-
-.navigation ul li a .title{
-position:relative;
-display: block;
-padding-left: 10px;
-height:60px;
-line-height:60px;
-white-space: nowrap;
-}
-
-.navigation ul li.active{
-    background-color:#039090;
-}
-    .navigation ul li.active a::before {
-        content: '';
-        position: absolute;
-        top: -30px;
-        right: 0;
-        width: 30px;
-        height: 30px;
-        background-color: #0ebbbb;
-        border-radius: 50%;
-        box-shadow: 15px 15px 0 #039090;
-    }
-
-    .navigation ul li.active a::after {
-        content: '';
-        position: absolute;
-        bottom: -30px;
-        right: 0;
-        width: 30px;
-        height: 30px;
-        background-color: #0ebbbb;
-        border-radius: 50%;
-        box-shadow: 15px -15px 0 #039090;
-    }
-
-.list:hover {
-    background-color: #039090;
-}
 
 
 
