Ajustes no Layout

--- a/SouDizimista.WebApp/Views/Shared/_Layout.cshtml
+++ b/SouDizimista.WebApp/Views/Shared/_Layout.cshtml
@@ -25,14 +25,17 @@
             </div>
 
             <div class="modulos-menu">
+
                 <div class="usuario">
                     Usuário
                 </div>
 
                 <div class="modulos">
-                    <nav>
+                    
+                    <img id="icone-suspenso" src="~/icones/menu.png" />
+                    
+                    <nav class="menu-nav">
                         <ul>
-
                             <li>
                                 <a href="#" >Cadastro</a>
                             </li>
