--- a/SouDizimista.WebApp/wwwroot/styles/main.css
+++ b/SouDizimista.WebApp/wwwroot/styles/main.css
@@ -85,18 +85,42 @@ header {
     visibility: visible;
 }
 
-nav {
+.menu-nav {
+    /*display:none;*/
     position: absolute;
     z-index: 99;
+    margin-right: 116px;
     background-color: rgba(14, 187, 187, 0.9);
-    width: 160px;
+    width: 260px;
     height: calc(100vh - 306px);
-    top: 64px;
+    top: 66px;
     right: 0;
     border-top-left-radius: 10px;
-    /*box-shadow: 10px 0 0 #039090;*/
+    box-shadow: 10px 0 0 #039090;
     border-left: 10px solid #039090;
 }
+.menu-nav ul{
+    display:flex;
+    flex-direction:column;
+    padding:20px;
+}
+.menu-nav li{
+    list-style:none;
+}
+
+.menu-nav li a{
+    display:flex;
+    color:#fff;
+    text-decoration:none;
+    height:33px;   
+}
+
+
+
+
+
+
+
 
 
 
