--- a/SouDizimista.WebApp/Views/Shared/_MenuItemsPartial.cshtml
+++ b/SouDizimista.WebApp/Views/Shared/_MenuItemsPartial.cshtml
@@ -1,7 +1,31 @@
 ﻿@model IEnumerable<SouDizimista.Services.ServicesEntity.ServiceMenuItem>
 
+@{
+    bool cadastroDisplayed = false;
+    bool administrativoDisplayed = false;
+    bool financeiroDisplayed = false;
+}
+
 @foreach (var menuItem in Model)
 {
+    @if (menuItem.UrlModulo == "Cadastro" && !cadastroDisplayed)
+    {
+        <p class="titulo-menu"> Cadastros </p>
+        cadastroDisplayed = true;
+    }
+
+    @if (menuItem.UrlModulo == "Administrativo" && !administrativoDisplayed)
+    {
+        <p class="titulo-menu"> Administração </p>
+        administrativoDisplayed = true;
+    }
+
+    @if (menuItem.UrlModulo == "Financeiro" && !financeiroDisplayed)
+    {
+        <p class="titulo-menu"> Finanças </p>
+        financeiroDisplayed = true;
+    }
+
     <li class="list @(ViewContext.RouteData.Values["controller"]?.ToString() == menuItem.Controller && ViewContext.RouteData.Values["action"]?.ToString() == menuItem.Action ? "active" : "")">
         <a asp-controller="@menuItem.Controller" asp-action="@menuItem.Action">
             <span class="icon"><ion-icon name="@menuItem.Icon"></ion-icon></span>
