--- a/SouDizimista.WebApp/wwwroot/styles/main.css
+++ b/SouDizimista.WebApp/wwwroot/styles/main.css
@@ -70,7 +70,7 @@ header {
 }
 
 .modulos{
-    
+    cursor:pointer;
 }
 .navigation {
     display: block;
@@ -86,7 +86,7 @@ header {
 }
 
 .menu-nav {
-    /*display:none;*/
+    display:none;
     position: absolute;
     z-index: 99;
     margin-right: 116px;
@@ -114,6 +114,31 @@ header {
     text-decoration:none;
     height:33px;   
 }
+
+.funcionalidade {
+    display: flex;
+    padding:20px 0px 0px 10px;
+    font-size:16px;
+}
+
+.list {
+    color: #fff;
+    font-size: 13px;
+    padding-left: 18px;
+    margin-bottom:8px;
+    margin-top:10px;
+}
+
+.list a{
+    color:#fff !important;
+}
+
+.titulo-menu {
+    margin-top: 20px;
+    padding-left: 18px;
+    margin-bottom:0px; 
+}
+
 
 
 
