--- a/SouDizimista.WebApp/Views/Shared/Pages BKP/_Layout.cshtml
+++ b/SouDizimista.WebApp/Views/Shared/Pages BKP/_Layout.cshtml
@@ -8,12 +8,10 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/styles/main.css" />
     <link rel="stylesheet" href="~/styles/main-content.css" />
-    <link rel="stylesheet" href="~/styles/NossosDizimista.css" />
+    <link rel="stylesheet" href="~/styles/nossos-dizimista.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="~/lib/bootstrap-icons/font/bootstrap-icons.css" />
-    <link href="~/lib/bootstrap-icons/font/fonts/bootstrap-icons.woff" />
-    <link href="~/lib/bootstrap-icons/font/fonts/bootstrap-icons.woff2" />
-    <link href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" />
+    <link href="~/lib/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -35,8 +33,8 @@
 
                 <div class="modulos">
                     
-                    @* <i class="bi bi-list" id="icone-suspenso"></i> *@
-                    <img id="icone-suspenso"  src="/icones/menu.png">
+                    <i class="bi bi-list img-menu h2" id="icone-suspenso"></i>
+                   @*  <img id="icone-suspenso"  src="/icones/menu.png"> *@
 
                     <nav class="menu-nav menu-suspenso-navigation">
                        <ul></ul>
@@ -49,7 +47,7 @@
         <aside id="navigator" class="navigation">
             <section>
                 <h1 class="funcionalidade"> Funcionalidades </h1>
-                <ul></ul>              
+                <ul class="nav-opcao"></ul>              
             </section>
         </aside>
     </header>
@@ -73,10 +71,6 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/menu_lateral.js"></script>
     <script src="~/js/menu-suspenso.js"></script>
-
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg .com/ionicons@5.5.2/dist/ionicons/ionicons.js"> </script>
-
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
