--- a/SouDizimista.WebApp/Views/Login/Login.cshtml
+++ b/SouDizimista.WebApp/Views/Login/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SouDizimista.Services.ServicesEntity.ServicesUsuario
 
 @{
-   Layout = "_LoginLayout";
+   Layout = "_Layout";
 }
 
 <h2> Sou Dizimista </h2>
